[package]
name = "z2p"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
actix-http = "2.1.0"
actix-service = "2.0.0"
actix-rt = "2.0.0"
reqwest = "0.11.0"
tokio = "1.0.1"



[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = 'z2p'